--- a/index.html
+++ b/index.html
@@ -92,6 +92,20 @@
 </tr>
 
 
+<tr>   
+	<th height="160" bgcolor="BurlyWood">落亦听枫叶:</th>
+     	
+	<td colspan="6">
+   
+	<p>传奇&nbsp&nbsp→&nbsp&nbsp超骑</p>
+	<p>史诗&nbsp&nbsp→&nbsp&nbsp哥布林木桶</p>
+	<p>稀有&nbsp&nbsp→&nbsp&nbsp火法师、地狱塔、火球</p>
+	<p>普通&nbsp&nbsp→&nbsp&nbsp皇家巨人</p>
+
+    	</td>
+
+</tr>
+
 
 
 </body>
