--- a/index.html
+++ b/index.html
@@ -107,6 +107,21 @@
 </tr>
 
 
+<tr>   
+	<th height="160" bgcolor="BurlyWood">陈大仙:</th>
+     	
+	<td colspan="6">
+   
+	<p>传奇&nbsp&nbsp→&nbsp&nbsp幽灵、蛮羊、游侠</p>
+	<p>史诗&nbsp&nbsp→&nbsp&nbsp毒药、石头</p>
+	<p>稀有&nbsp&nbsp→&nbsp&nbsp野猪、迷你皮卡、巨人、地狱塔、冰人</p>
+	<p>普通&nbsp&nbsp→&nbsp&nbsp全收</p>
+
+    	</td>
+
+</tr>
+
+
 
 </body>
  
