--- a/index.html
+++ b/index.html
@@ -122,6 +122,19 @@
 </tr>
 
 
+<tr>   
+	<th height="160" bgcolor="BurlyWood">医院:</th>
+     	
+	<td colspan="6">
+   
+	<p>传奇&nbsp&nbsp→&nbsp&nbsp电法、女巫婆婆</p>
+	<p>史诗&nbsp&nbsp→&nbsp&nbsp飞桶、气球</p>
+	<p>稀有&nbsp&nbsp→&nbsp&nbsp</p>
+	<p>普通&nbsp&nbsp→&nbsp&nbsp骨龙、烟花炮手</p>
+
+    	</td>
+
+</tr>
 
 </body>
  
