--- a/index.html
+++ b/index.html
@@ -136,6 +136,21 @@
 
 </tr>
 
+
+<tr>   
+	<th height="160" bgcolor="BurlyWood">piupiu:</th>
+     	
+	<td colspan="6">
+   
+	<p>传奇&nbsp&nbsp→&nbsp&nbsp公主、刺客</p>
+	<p>史诗&nbsp&nbsp→&nbsp&nbsp皮卡超人、屠夫</p>
+	<p>稀有&nbsp&nbsp→&nbsp&nbsp战斗天使、奶豆</p>
+	<p>普通&nbsp&nbsp→&nbsp&nbsp</p>
+
+    	</td>
+
+</tr>
+
 </body>
  
 
